// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots display/Chip Docs 1`] = `
.c0 {
  display: inline-block;
  border-radius: 100px;
  cursor: default;
  background-color: #263228;
  padding: 8px 16px;
  color: #fafafa;
  font-size: 14px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
  color="primary"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  <div
    className="c1"
  >
    Sample
  </div>
</div>
`;

exports[`Storyshots display/Chip With Delete Icon 1`] = `
.c0 {
  display: inline-block;
  border-radius: 100px;
  cursor: default;
  background-color: #0d47a1;
  padding: 8px 16px;
  color: #fafafa;
  font-size: 14px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
  color="info"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  <div
    className="c1"
  >
    With Delete Icon
  </div>
</div>
`;

exports[`Storyshots display/Icons Docs 1`] = `
.c0 {
  fill: #4e5b50;
  width: 36px;
  height: 36px;
}

<svg
  aria-hidden={true}
  className="c0"
  color="primary"
  size="large"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
  />
</svg>
`;

exports[`Storyshots display/Icons Icon List 1`] = `
.c3 {
  fill: #60ac5d;
  width: 36px;
  height: 36px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  display: inline-block;
  padding: 10px;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p>
      AddCircleIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      AddIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      ArrowDropDownIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      ArrowLeftIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      CancelIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      CloseIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      DeleteIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      HighLightOffIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M14.59 8L12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      InfoIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      MenuIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      RefreshIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      SaveIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      SyncIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
        />
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <p>
      WarningIcon
    </p>
    <div
      className="c2"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="secondary"
        size="large"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots inputs/Button Docs 1`] = `
.c0 {
  font-weight: 700;
  border: 0;
  border-radius: 3px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  font-size: 16px;
  padding: 12px 24px;
  background-color: #263228;
  color: #fafafa;
}

.c0:hover {
  opacity: 0.5;
}

<button
  className="c0"
  color="primary"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots inputs/Checkbox Docs 1`] = `
.c3 {
  fill: #4e5b50;
  width: 24px;
  height: 24px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:hover {
  opacity: 0.5;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 150ms;
  transition: all 150ms;
  margin-right: 5px;
}

.c4 {
  cursor: pointer;
  font-size: 16px;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  width: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
}

<div
  className="c0"
  disabled={false}
>
  <input
    className="c1"
    id="checkbox"
    name="Checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="c2"
  >
    <svg
      aria-hidden={true}
      className="c3"
      color="primary"
      size="medium"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
  <label
    className="c4"
    color="primary"
    disabled={false}
    htmlFor="checkbox"
    required={false}
    size="medium"
  >
    Checkbox
  </label>
</div>
`;

exports[`Storyshots inputs/IconButton Docs 1`] = `
.c1 {
  fill: #4e5b50;
  width: 24px;
  height: 24px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  padding: 4px;
  border: none;
  cursor: pointer;
}

.c0:hover {
  opacity: 0.5;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
>
  <svg
    aria-hidden={true}
    className="c1"
    color="primary"
    size="medium"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"
    />
  </svg>
</button>
`;

exports[`Storyshots inputs/TextInput Docs 1`] = `
.c4 {
  fill: #62727b;
  width: 18px;
  height: 18px;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  padding: 4px;
  border: none;
  cursor: pointer;
}

.c2:hover {
  opacity: 0.5;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 100%;
  background-color: #ffffff;
  border-width: 1px;
  border-color: #c7c7c7;
  border-style: solid;
  border-radius: 3px;
  padding: 4px;
}

.c1 {
  border: none;
  outline: none;
  line-height: 20px;
  padding: 4px;
  width: 100%;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.c3 {
  border: none;
  outline: none;
}

<div
  className="c0"
  disabled={false}
>
  <input
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onCompositionEnd={[Function]}
    onCompositionStart={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <button
    className="c2 c3"
    disabled={false}
    onClick={[Function]}
  >
    <svg
      aria-hidden={true}
      className="c4"
      color="default"
      size="small"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M14.59 8L12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots surfaces/Accordion Disabled 1`] = `
.c1 {
  fill: #62727b;
  width: 24px;
  height: 24px;
}

.c3 {
  -webkit-transition: -webkit-transform 0.3s linear;
  -webkit-transition: transform 0.3s linear;
  transition: transform 0.3s linear;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c5 {
  -webkit-transition: height 0.3s,opacity 0.3s linear;
  transition: height 0.3s,opacity 0.3s linear;
  height: auto;
  opacity: 1;
  padding: 4px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  opacity: 0.5;
  padding: 4px;
  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
}

.c0 > .{
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 4px;
  cursor: default;
}

.c0 > .> .{
  display: inline-block;
  font-weight: 700;
}

.c0 > .> .c2 {
  display: inline-block;
}

.c0 > .c4 {
  display: inline-block;
  width: 100%;
}

<div
  className="c0"
>
  <div
    aria-controls="accordion-undefined-header"
    aria-disabled={false}
    aria-expanded={true}
    className=""
    onClick={[Function]}
    role="button"
  >
    <label
      className=""
    >
      Accordion Disabled Sample
    </label>
    <svg
      aria-hidden={true}
      className="c1 c2 c3"
      color="default"
      size="medium"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="accordion-undefined-header"
    className="c4 c5"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</div>
`;

exports[`Storyshots surfaces/Accordion Docs 1`] = `
.c1 {
  fill: #62727b;
  width: 24px;
  height: 24px;
}

.c3 {
  -webkit-transition: -webkit-transform 0.3s linear;
  -webkit-transition: transform 0.3s linear;
  transition: transform 0.3s linear;
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}

.c5 {
  overflow: hidden;
  height: 0;
  opacity: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  padding: 4px;
  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
}

.c0 > .{
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 4px;
  cursor: pointer;
}

.c0 > .:hover {
  opacity: 0.5;
}

.c0 > .> .{
  display: inline-block;
  font-weight: 700;
}

.c0 > .> .c2 {
  display: inline-block;
}

.c0 > .c4 {
  display: inline-block;
  width: 100%;
}

<div
  className="c0"
>
  <div
    aria-controls="accordion-undefined-header"
    aria-disabled={true}
    aria-expanded={false}
    className=""
    onClick={[Function]}
    role="button"
  >
    <label
      className=""
    >
      Accordion Sample
    </label>
    <svg
      aria-hidden={true}
      className="c1 c2 c3"
      color="default"
      size="medium"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="accordion-undefined-header"
    className="c4 c5"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</div>
`;
